--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "Epidemiology PhD student | Spatial Analysis | Cancer Prevention"
   location         : "Canada"
   employer         : "University of British Columbia"
-  uri              : "https://ezraxyu.github.io"
+  # uri              : "https://ezraxyu.github.io"
   email            : "ezraxyu@student.ubc.ca"
 
   # Academic websites
@@ -47,7 +47,7 @@ author:
   # bitbucket        : # Username - Update with your username on the site
   # codepen          : # Username
   # dribbble         : # Username
-  github           : "ezraxyu"
+  # github           : "ezraxyu"
   # kaggle           : # Username  
   # stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
