--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
  # keybase          : # Username
  # instagram        : # Username
  # lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/ezra-yu-03494676/"
+  linkedin         : "ezra-yu-03494676/"
  # mastodon         : # URL
  # medium           : # URL
  # pinterest        : # Username
