--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   # Biographic information
   avatar           : "profile.jpg"
   name             : "Ezra"
-  pronouns         : "he/him"
-  bio              : "Epidemiology PhD student | Spatial Analysis | Cancer Prevention"
-  location         : "Canada"
+  pronouns         : "He/him"
+  bio              : "Cancer Epidemiology | Environmental Health | Spatial Analysis "
+  location         : "Vancouver, Canada"
   employer         : "University of British Columbia"
   # uri              : "https://ezraxyu.github.io"
   email            : "ezraxyu@student.ubc.ca"
