--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Ezra"
   pronouns         : "He/him"
-  bio              : "Cancer Prevention | Environmental Health | Spatial Analysis "
+  bio              : "Cancer Prevention | Environmental Health | Epidemiological Methods | Spatial Analysis "
   location         : "Vancouver, Canada"
   employer         : "University of British Columbia"
   # uri              : "https://ezraxyu.github.io"
